--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>PIYUSH | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -46,9 +46,9 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Piyush Negi</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Front-end Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -68,7 +68,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="https://64.media.tumblr.com/4c83bcf00b2f4d81e2abdc0d76661469/4ef631936bfa9b69-b2/s540x810/e05ba1e24cf8425e7d73b1367be1bbd4d0ba2d86.gifv"
                 alt="Profile Image"
               />
             </div>
@@ -101,6 +101,40 @@
           <h2 class="section-title dark-blue-text">Projects</h2>
 
           <!-- Each .row is a project -->
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <div>
+                  <p class="mb-4">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Excepturi neque, ipsa animi maiores repellendus distinctio
+                    aperiam earum dolor voluptatum consequatur blanditiis
+                    inventore debitis fuga numquam voluptate ex architecto
+                    itaque molestiae.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://csb-nt26s.netlify.app/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://codesandbox.io/s/weather-app-nt26s">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/forport1.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -117,7 +151,7 @@
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="">
                   Source Code
                 </a>
               </div>
@@ -126,7 +160,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/todolist.JPG" />
                   </div>
                 </a>
               </div>
@@ -148,10 +182,10 @@
                     itaque molestiae.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://csb-56vg6.netlify.app/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://codesandbox.io/s/react-dashboard-56vg6">
                   Source Code
                 </a>
               </div>
@@ -160,7 +194,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/forport2.png" />
                   </div>
                 </a>
               </div>
@@ -182,10 +216,10 @@
                     itaque molestiae.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://csb-thnyk.netlify.app/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://codesandbox.io/s/currency-convert-website-thnyk">
                   Source Code
                 </a>
               </div>
@@ -194,7 +228,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/forport.png" />
                   </div>
                 </a>
               </div>
@@ -215,8 +249,8 @@
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:npiyush35@gmail.com"
+            >CLICK TO CONTACT</a
           >
         </div>
       </div>
@@ -233,13 +267,13 @@
           <a href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://codepen.io/your-work/" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/piyush-negi/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/npiyush97" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
